tests/baselines/reference/for-inStatementsDestructuring.errors.txt
for-inStatementsDestructuring.ts(1,10): error TS2461: Type 'string' is not an array type.


==== for-inStatementsDestructuring.ts (1 errors) ====
    for (var [a, b] in []) {}
             ~~~~~~
!!! error TS2461: Type 'string' is not an array type.